=======
CHANGES
=======

3.5.1 (Unreleased)
------------------

- Remove more deprecated on 3.5 code:

  * zope.app.component.fields module that was pointing to the
    removed back35's LayerField.
  * zope.app.component.interface module that was moved to
    zope.component.interface ages ago.
  * zope:content and zope:localUtility directives.
  * zope:factory directive.
  * deprecated imports in zope.component.metaconfigure

- Remove "back35" extras_require as it doesn't make
  any sense now.

- Remove zope.modulealias test dependency as it is
  not used anywhere.

3.5.0 (2008-10-13)
------------------

- Remove deprecated code slated for removal on 3.5.

3.4.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-11)
------------------

- Initial release independent of the main Zope tree.