@@ -1,11 +1,0 @@
-<configure 
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:meta="http://namespaces.zope.org/meta">
-
-  <meta:directive
-      namespace="http://namespaces.zope.org/browser"
-      name="tool"
-      schema=".metadirectives.IUtilityToolDirective"
-      handler=".metaconfigure.tool"/>
-
-</configure>
